--- a/package.json
+++ b/package.json
@@ -14,8 +14,13 @@
     "@types/mocha": "^10.0.1",
     "@types/node": "^18.14.6",
     "chai": "^4.3.7",
+    "dotenv": "^16.0.3",
     "mocha": "^10.2.0",
     "solc": "^0.8.19",
     "typescript": "^4.9.5"
+  },
+  "dependencies": {
+    "axios": "^1.3.4",
+    "ethers": "^6.0.8"
   }
 }
