--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,9 @@
 {
     "compilerOptions": {
-      "module": "commonjs",
+      "module": "CommonJS",
       "noImplicitAny": true,
       "outDir": "js",
       "esModuleInterop": true,
-      "resolveJsonModule": true,
       "sourceMap": true,
       "target": "es2020",
       "downlevelIteration": true
